--- a/animation/group1/demo1.html
+++ b/animation/group1/demo1.html
@@ -6,23 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style>
+    /* 3维透视形变 */
     #box{
       width: 200px;
       height: 200px;
       margin: 50px auto;
       padding: 50px;
       border: 1px solid #000;
-      perspective: 400px;
+      perspective: 200px;
     }
     #div{
       width: 200px;
       height: 200px;
       background: #f00;
-      transform: rotateX(0);
+      transform: rotateY(0);
       transition: 5s;
     }
     #box:hover #div{
-      transform: rotateX(360deg);
+      transform: rotateY(360deg);
     }
   </style>
 </head>
